#5 simple load data to gallery fragment

--- a/EasyImgurPhone/res/layout/row_gallery.xml
+++ b/EasyImgurPhone/res/layout/row_gallery.xml
@@ -4,11 +4,28 @@
     android:layout_height="match_parent"
     android:orientation="vertical" >
 
-    <TextView
-        android:id="@+id/tvTitle"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="20sp"
-        android:padding="5dp" />
+        android:background="#CCecc8ff"
+        android:orientation="vertical"
+        android:layout_margin="12dp" >
+
+        <TextView
+            android:id="@+id/tvTitle"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="5dp"
+            android:textSize="16sp" />
+
+        <ImageView
+            android:id="@+id/ivThumb"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_margin="10dp"
+            android:contentDescription="@string/app_name"
+            android:scaleType="centerCrop"
+            android:src="@drawable/bg_default" />
+    </LinearLayout>
 
 </LinearLayout>
