--- a/EasyImgurPhone/res/layout/row_gallery.xml
+++ b/EasyImgurPhone/res/layout/row_gallery.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical" >
@@ -7,9 +8,9 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_margin="12dp"
         android:background="#CCecc8ff"
-        android:orientation="vertical"
-        android:layout_margin="12dp" >
+        android:orientation="vertical" >
 
         <TextView
             android:id="@+id/tvTitle"
@@ -18,14 +19,17 @@
             android:padding="5dp"
             android:textSize="16sp" />
 
-        <ImageView
+        <com.makeramen.RoundedImageView
             android:id="@+id/ivThumb"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_margin="10dp"
-            android:contentDescription="@string/app_name"
+            android:layout_height="wrap_content"
+            android:layout_margin="12dp"
             android:scaleType="centerCrop"
-            android:src="@drawable/bg_default" />
+            android:src="@drawable/bg_default"
+            app:border_color="#333333"
+            app:border_width="1dp"
+            app:corner_radius="10dp"
+            app:round_background="true" />
     </LinearLayout>
 
 </LinearLayout>
