--- a/EasyImgurPhone/res/layout/row_gallery.xml
+++ b/EasyImgurPhone/res/layout/row_gallery.xml
@@ -8,30 +8,54 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="12dp"
-        android:background="#CCecc8ff"
+        android:layout_margin="7dp"
+        android:background="@drawable/bg_row_gallery"
         android:orientation="vertical" >
-
-        <TextView
-            android:id="@+id/tvTitle"
+        
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="5dp"
-            android:textSize="16sp" />
+            android:layout_marginLeft="12dp"
+            android:layout_marginRight="12dp"
+            android:orientation="vertical" >
+
+            <sg.vinova.easy_imgur.widgets.EllipsizingTextView
+                android:id="@+id/tvTitle"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="3dp"
+                android:maxLines="2"
+                android:textColor="@android:color/black"
+                android:textSize="16sp" />
+
+            <TextView
+                android:id="@+id/tvTime"
+                android:paddingTop="4dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:drawableLeft="@drawable/ic_clock"
+                android:drawablePadding="5dp"
+                android:gravity="center"
+                android:text="TextView"
+                android:textSize="12sp" />
+        </LinearLayout>
 
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent" >
 
-            <ImageView
+            <com.makeramen.RoundedImageView
                 android:id="@+id/ivThumb"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="170dp"
                 android:layout_centerInParent="true"
                 android:layout_margin="12dp"
-                android:contentDescription="@string/app_name"
                 android:scaleType="centerCrop"
-                android:src="@drawable/bg_default" />
+                android:src="@drawable/bg_default"
+                app:border_color="#333333"
+                app:border_width="1dp"
+                app:corner_radius="10dp"
+                app:round_background="true" />
 
             <ImageButton
                 android:id="@+id/ibGifPlay"
@@ -42,6 +66,49 @@
                 android:contentDescription="@string/app_name"
                 android:src="@drawable/ic_gif_play"
                 android:visibility="gone" />
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignBottom="@+id/ivThumb"
+                android:layout_centerHorizontal="true"
+                android:layout_marginBottom="10dp"
+                android:gravity="center"
+                android:orientation="horizontal" >
+
+                <ImageView
+                    android:id="@+id/ivVoteUp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="@android:color/transparent"
+                    android:contentDescription="@string/app_name"
+                    android:src="@drawable/ic_vote_up" />
+
+                <TextView
+                    android:id="@+id/tvUpCount"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="5dp"
+                    android:text="0"
+                    android:textSize="16sp" />
+
+                <ImageButton
+                    android:id="@+id/ivVoteDown"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="20dp"
+                    android:background="@android:color/transparent"
+                    android:contentDescription="@string/app_name"
+                    android:src="@drawable/ic_vote_down" />
+
+                <TextView
+                    android:id="@+id/tvDownCount"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="5dp"
+                    android:text="0"
+                    android:textSize="16sp" />
+            </LinearLayout>
         </RelativeLayout>
     </LinearLayout>
 
