--- a/EasyImgurPhone/res/layout/activity_container.xml
+++ b/EasyImgurPhone/res/layout/activity_container.xml
@@ -13,11 +13,11 @@
     </FrameLayout>
 
     <ListView
+        android:background="@drawable/bg_menu"
         android:id="@+id/lv_left_menu"
         android:layout_width="240dp"
         android:layout_height="match_parent"
         android:layout_gravity="start"
-        android:background="@color/list_background"
         android:choiceMode="singleChoice"
         android:divider="#cccccc"
         android:dividerHeight="1dp"
