--- a/EasyImgurPhone/res/layout/fragment_detail.xml
+++ b/EasyImgurPhone/res/layout/fragment_detail.xml
@@ -188,8 +188,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
-                        android:contentDescription="@string/app_name"
-                        android:src="@drawable/favourite" />
+                        android:contentDescription="@string/app_name" />
                 </LinearLayout>
             </RelativeLayout>
 
