--- a/EasyImgurPhone/res/layout/fragment_detail.xml
+++ b/EasyImgurPhone/res/layout/fragment_detail.xml
@@ -79,9 +79,7 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/ll_header"
                 android:contentDescription="@string/app_name"
-                android:scaleType="fitCenter"
-                android:src="@drawable/ic_clock"
-                android:visibility="gone" />
+                android:scaleType="fitCenter" />
 
             <sg.vinova.easy_imgur.widgets.HackyViewPageScrollView
                 xmlns:android="http://schemas.android.com/apk/res/android"
@@ -89,6 +87,20 @@
                 android:layout_width="match_parent"
                 android:layout_height="250dp"
                 android:layout_below="@+id/ll_header"
+                android:visibility="gone" />
+
+            <TextView
+                android:id="@+id/text_detail_gallery"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:layout_centerVertical="true"
+                android:background="@drawable/bg_link"
+                android:padding="10dp"
+                android:text="@string/tip_detail_gallery"
+                android:textColor="@android:color/white"
+                android:textSize="18sp"
+                android:textStyle="bold"
                 android:visibility="gone" />
 
             <RelativeLayout
