--- a/EasyImgurPhone/res/values/colors.xml
+++ b/EasyImgurPhone/res/values/colors.xml
@@ -5,4 +5,7 @@
     
     <color name="title_article_detail">#2d2d2d</color>
     <color name="title_category">#e1e1e1</color>
+    
+    <color name="text_link_negative">#d2d2d2</color>
+    <color name="text_link_positive">#ffffff</color>
 </resources>
