--- a/EasyImgurPhone/res/layout/galleries_fragment.xml
+++ b/EasyImgurPhone/res/layout/galleries_fragment.xml
@@ -4,7 +4,7 @@
     android:id="@+id/ptr_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/bg_gallery"
+    android:background="@android:color/black"
     android:orientation="vertical" >
 
     <ListView
@@ -12,8 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:divider="@android:color/transparent"
-        android:fastScrollEnabled="false"
-        android:scrollbars="none" >
+        android:fastScrollEnabled="false" >
     </ListView>
 
 </uk.co.senab.actionbarpulltorefresh.extras.actionbarsherlock.PullToRefreshLayout>
