--- a/EasyImgurPhone/res/layout/row_gallery.xml
+++ b/EasyImgurPhone/res/layout/row_gallery.xml
@@ -45,7 +45,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content" >
 
-            <com.makeramen.RoundedImageView
+            <!-- <com.makeramen.RoundedImageView
                 android:id="@+id/ivThumb"
                 android:layout_width="match_parent"
                 android:layout_height="170dp"
@@ -57,7 +57,17 @@
                 app:border_color="#333333"
                 app:border_width="1dp"
                 app:corner_radius="6dp"
-                app:round_background="true" />
+                app:round_background="true" /> -->
+            
+            <ImageView 
+                android:layout_width="match_parent"
+                android:id="@+id/ivThumb"
+                android:layout_height="170dp"
+                android:layout_centerInParent="true"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:scaleType="centerCrop"
+                android:src="@drawable/bg_default"/>
 
             <ImageButton
                 android:id="@+id/ibGifPlay"
