--- a/EasyImgurPhone/res/values/colors.xml
+++ b/EasyImgurPhone/res/values/colors.xml
@@ -8,4 +8,7 @@
     
     <color name="text_link_negative">#d2d2d2</color>
     <color name="text_link_positive">#ffffff</color>
+    
+    <color name="bg_vote_up">#b45266</color>
+    <color name="bg_vote_down">#ce8593</color>
 </resources>
