--- a/EasyImgurPhone/res/layout/upload_image_fragment.xml
+++ b/EasyImgurPhone/res/layout/upload_image_fragment.xml
@@ -4,6 +4,13 @@
     android:layout_height="match_parent"
     android:orientation="vertical" >
 
+    <ImageView
+        android:id="@+id/ivThumb"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:scaleType="centerInside"
+        android:src="@drawable/bg_default" />
+
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -28,12 +35,5 @@
             android:layout_height="wrap_content"
             android:text="Upload" />
     </LinearLayout>
-
-    <ImageView
-        android:id="@+id/ivThumb"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:scaleType="matrix"
-        android:src="@drawable/bg_default" />
 
 </RelativeLayout>
